// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /transfer positive should return oid updated daycares 1`] = `
{
  "daycare": [
    {
      "additional_info": null,
      "backup_location": null,
      "business_id": "",
      "capacity": 0,
      "care_area_id": "6529f6ce-9777-11eb-ba8a-8f6495ec5104",
      "closing_date": null,
      "club_apply_period": null,
      "cost_center": "99",
      "created": Any<String>,
      "daily_preparatory_time": null,
      "daily_preschool_time": null,
      "daycare_apply_period": "[2021-04-20,)",
      "decision_daycare_name": "Tenhon testiyksikkö",
      "decision_handler": "",
      "decision_handler_address": "",
      "decision_preschool_name": "",
      "dw_cost_center": null,
      "email": null,
      "enabled_pilot_features": "{}",
      "evaka_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "finance_decision_handler": null,
      "ghost_unit": false,
      "iban": "",
      "id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "invoiced_by_municipality": true,
      "language": "fi",
      "language_emphasis_id": null,
      "location": {
        "x": 21.55555,
        "y": 61.55555,
      },
      "mailing_po_box": "Testikuja 123",
      "mailing_post_office": "Tenhola",
      "mailing_postal_code": "12000",
      "mailing_street_address": null,
      "mealtime_breakfast": null,
      "mealtime_evening_snack": null,
      "mealtime_lunch": null,
      "mealtime_snack": null,
      "mealtime_supper": null,
      "name": "Tenhon testiyksikkö",
      "opening_date": "2020-03-01T00:00:00.000Z",
      "operation_days": [],
      "operation_times": "{NULL,NULL,NULL,NULL,NULL,NULL,NULL}",
      "oph_organizer_oid": "1.2.3.4",
      "oph_unit_oid": "1.2.3.4.5.6",
      "organizer_oid": "1.2.3.4",
      "phone": null,
      "post_office": "Tenhola",
      "postal_code": "12000",
      "preschool_apply_period": null,
      "provider_id": "",
      "provider_type": "MUNICIPAL",
      "round_the_clock": false,
      "schedule": null,
      "street_address": "Testikuja 123",
      "type": "{CENTRE}",
      "unit_manager_email": "",
      "unit_manager_name": "",
      "unit_manager_phone": "",
      "unit_oid": "1.2.3.4.5.6",
      "updated": Any<String>,
      "upload_children_to_varda": false,
      "upload_to_koski": false,
      "upload_to_varda": false,
      "url": null,
    },
    {
      "additional_info": null,
      "backup_location": null,
      "business_id": "",
      "capacity": 0,
      "care_area_id": "6529f5a2-9777-11eb-ba89-cfcda122ed3b",
      "closing_date": null,
      "club_apply_period": null,
      "cost_center": null,
      "created": Any<String>,
      "daily_preparatory_time": null,
      "daily_preschool_time": null,
      "daycare_apply_period": "[2021-04-20,)",
      "decision_daycare_name": "Pujakan testiyksikkö",
      "decision_handler": "",
      "decision_handler_address": "",
      "decision_preschool_name": "",
      "dw_cost_center": null,
      "email": null,
      "enabled_pilot_features": "{}",
      "evaka_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
      "finance_decision_handler": null,
      "ghost_unit": false,
      "iban": "",
      "id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
      "invoiced_by_municipality": false,
      "language": "fi",
      "language_emphasis_id": null,
      "location": {
        "x": 21.66666,
        "y": 61.66666,
      },
      "mailing_po_box": "Testaajankatu 321",
      "mailing_post_office": "Pajuoja",
      "mailing_postal_code": "13000",
      "mailing_street_address": null,
      "mealtime_breakfast": null,
      "mealtime_evening_snack": null,
      "mealtime_lunch": null,
      "mealtime_snack": null,
      "mealtime_supper": null,
      "name": "Pujakan testiyksikkö",
      "opening_date": "2020-03-01T00:00:00.000Z",
      "operation_days": [],
      "operation_times": "{NULL,NULL,NULL,NULL,NULL,NULL,NULL}",
      "oph_organizer_oid": "1.2.3.5",
      "oph_unit_oid": "1.2.3.4.5.7",
      "organizer_oid": "1.2.3.5",
      "phone": null,
      "post_office": "Pajuoja",
      "postal_code": "13000",
      "preschool_apply_period": null,
      "provider_id": "",
      "provider_type": "MUNICIPAL",
      "round_the_clock": false,
      "schedule": null,
      "street_address": "Testaajankatu 321",
      "type": "{CENTRE}",
      "unit_manager_email": "",
      "unit_manager_name": "",
      "unit_manager_phone": "",
      "unit_oid": "1.2.3.4.5.7",
      "updated": Any<String>,
      "upload_children_to_varda": false,
      "upload_to_koski": false,
      "upload_to_varda": false,
      "url": null,
    },
  ],
  "varda_unit": [
    {
      "created_at": Any<String>,
      "evaka_daycare_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "uploaded_at": Any<String>,
      "varda_unit_id": "100",
    },
  ],
}
`;

exports[`GET /transfer positive should return transferred absences 1`] = `
[
  {
    "absence_type": "SICKLEAVE",
    "category": "BILLABLE",
    "child_id": Any<String>,
    "date": "2020-03-09T00:00:00.000Z",
    "id": Any<String>,
    "modified_at": Any<String>,
    "modified_by": Any<String>,
    "questionnaire_id": null,
  },
]
`;

exports[`GET /transfer positive should return transferred applications 1`] = `
{
  "applications": [
    {
      "additionaldaycareapplication": false,
      "allow_other_guardian_access": false,
      "checkedbyadmin": false,
      "child_id": Any<String>,
      "created": Any<String>,
      "document": {
        "additionalDetails": {
          "allergyType": "",
          "dietType": "",
          "otherInfo": "",
        },
        "apply": {
          "preferredUnits": [
            "19fec146-e2f1-11eb-8473-db55258254c5",
            "cecdf326-0a56-11ec-90a9-e73454a1ee1a",
          ],
          "siblingBasis": false,
          "siblingName": "",
          "siblingSsn": "",
        },
        "careDetails": {
          "assistanceDescription": "",
          "assistanceNeeded": false,
          "preparatory": null,
        },
        "child": {
          "address": {
            "city": "Ypäjä",
            "editable": false,
            "postalCode": "00001",
            "street": "HideStreet 2",
          },
          "childMovingDate": null,
          "correctingAddress": {
            "city": "",
            "editable": true,
            "postalCode": "",
            "street": "",
          },
          "dateOfBirth": "2019-06-01",
          "firstName": "Christian",
          "hasCorrectingAddress": null,
          "language": "fi",
          "lastName": "Child",
          "nationality": "FI",
          "restricted": false,
          "socialSecurityNumber": "010619A9501",
        },
        "connectedDaycare": null,
        "docVersion": 0,
        "extendedCare": false,
        "guardian": {
          "address": {
            "city": "Ypäjä",
            "editable": false,
            "postalCode": "00001",
            "street": "Fakestreet 123",
          },
          "correctingAddress": {
            "city": "",
            "editable": true,
            "postalCode": "",
            "street": "",
          },
          "email": "fake@notmaildomain.notext",
          "firstName": "Aimo",
          "guardianMovingDate": null,
          "hasCorrectingAddress": null,
          "lastName": "Authentic",
          "phoneNumber": "000-0000000",
          "restricted": false,
          "socialSecurityNumber": "020967-9992",
        },
        "guardian2": null,
        "hasOtherAdults": false,
        "hasOtherChildren": false,
        "maxFeeAccepted": false,
        "otherAdults": [],
        "otherChildren": [],
        "otherGuardianAgreementStatus": null,
        "partTime": false,
        "preferredStartDate": "2021-09-01",
        "serviceEnd": null,
        "serviceNeedOption": {
          "id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
          "nameEn": "Full-time",
          "nameFi": "Kokopäiväinen",
          "nameSv": "Kokopäiväinen",
        },
        "serviceStart": null,
        "type": "DAYCARE",
        "urgent": false,
      },
      "duedate": "2025-11-29T00:00:00.000Z",
      "duedate_set_manually_at": null,
      "form_modified": null,
      "guardian_id": Any<String>,
      "hidefromguardian": false,
      "id": Any<String>,
      "origin": "ELECTRONIC",
      "other_guardian_id": null,
      "sentdate": "2025-08-01T00:00:00.000Z",
      "service_worker_note": "",
      "status": "SENT",
      "transferapplication": true,
      "type": "DAYCARE",
      "updated": Any<String>,
    },
    {
      "additionaldaycareapplication": false,
      "allow_other_guardian_access": false,
      "checkedbyadmin": false,
      "child_id": Any<String>,
      "created": Any<String>,
      "document": {
        "additionalDetails": {
          "allergyType": "",
          "dietType": "",
          "otherInfo": "",
        },
        "apply": {
          "preferredUnits": [
            "19fec146-e2f1-11eb-8473-db55258254c5",
            "cecdf326-0a56-11ec-90a9-e73454a1ee1a",
          ],
          "siblingBasis": false,
          "siblingName": "",
          "siblingSsn": "",
        },
        "careDetails": {
          "assistanceDescription": "",
          "assistanceNeeded": false,
          "preparatory": null,
        },
        "child": {
          "address": {
            "city": "Ypäjä",
            "editable": false,
            "postalCode": "00001",
            "street": "HideStreet 2",
          },
          "childMovingDate": null,
          "correctingAddress": {
            "city": "",
            "editable": true,
            "postalCode": "",
            "street": "",
          },
          "dateOfBirth": "2019-06-01",
          "firstName": "Christian",
          "hasCorrectingAddress": null,
          "language": "fi",
          "lastName": "Child",
          "nationality": "FI",
          "restricted": false,
          "socialSecurityNumber": "010619A9501",
        },
        "connectedDaycare": null,
        "docVersion": 0,
        "extendedCare": false,
        "guardian": {
          "address": {
            "city": "Ypäjä",
            "editable": false,
            "postalCode": "00001",
            "street": "Fakestreet 123",
          },
          "correctingAddress": {
            "city": "",
            "editable": true,
            "postalCode": "",
            "street": "",
          },
          "email": "fake@notmaildomain.notext",
          "firstName": "Aimo",
          "guardianMovingDate": null,
          "hasCorrectingAddress": null,
          "lastName": "Authentic",
          "phoneNumber": "000-0000000",
          "restricted": false,
          "socialSecurityNumber": "020967-9992",
        },
        "guardian2": null,
        "hasOtherAdults": false,
        "hasOtherChildren": false,
        "maxFeeAccepted": false,
        "otherAdults": [],
        "otherChildren": [],
        "otherGuardianAgreementStatus": null,
        "partTime": false,
        "preferredStartDate": "2021-09-01",
        "serviceEnd": null,
        "serviceNeedOption": {
          "id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
          "nameEn": "Full-time",
          "nameFi": "Kokopäiväinen",
          "nameSv": "Kokopäiväinen",
        },
        "serviceStart": null,
        "type": "DAYCARE",
        "urgent": false,
      },
      "duedate": null,
      "duedate_set_manually_at": null,
      "form_modified": null,
      "guardian_id": Any<String>,
      "hidefromguardian": false,
      "id": Any<String>,
      "origin": "ELECTRONIC",
      "other_guardian_id": null,
      "sentdate": "2020-04-01T00:00:00.000Z",
      "service_worker_note": "",
      "status": "SENT",
      "transferapplication": false,
      "type": "DAYCARE",
      "updated": Any<String>,
    },
  ],
}
`;

exports[`GET /transfer positive should return transferred assistance actions 1`] = `
{
  "assistanceActionOptions": [
    {
      "action_id": Any<String>,
      "created": Any<String>,
      "option_id": Any<String>,
    },
  ],
  "assistanceActions": [
    {
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2020-05-31T00:00:00.000Z",
      "id": Any<String>,
      "measures": "{}",
      "other_action": "",
      "start_date": "2019-08-08T00:00:00.000Z",
      "updated": Any<String>,
      "updated_by": Any<String>,
    },
  ],
}
`;

exports[`GET /transfer positive should return transferred assistance needs 1`] = `
{
  "assistanceBases": [],
  "assistanceNeeds": [
    {
      "capacity_factor": "0",
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2020-05-31T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2019-08-08T00:00:00.000Z",
      "updated": Any<String>,
      "updated_by": Any<String>,
    },
  ],
}
`;

exports[`GET /transfer positive should return transferred backup cares 1`] = `
[
  {
    "child_id": Any<String>,
    "created": Any<String>,
    "end_date": "2020-03-17T00:00:00.000Z",
    "group_id": Any<String>,
    "id": Any<String>,
    "start_date": "2020-03-15T00:00:00.000Z",
    "unit_id": Any<String>,
    "updated": Any<String>,
  },
  {
    "child_id": Any<String>,
    "created": Any<String>,
    "end_date": "2020-03-19T00:00:00.000Z",
    "group_id": Any<String>,
    "id": Any<String>,
    "start_date": "2020-03-19T00:00:00.000Z",
    "unit_id": Any<String>,
    "updated": Any<String>,
  },
]
`;

exports[`GET /transfer positive should return transferred child attendances 1`] = `
[
  {
    "child_id": Any<String>,
    "created": Any<String>,
    "date": "2021-01-01T00:00:00.000Z",
    "end_time": "16:17:00",
    "id": Any<String>,
    "start_time": "07:26:00",
    "unit_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
    "updated": Any<String>,
  },
]
`;

exports[`GET /transfer positive should return transferred daycares 1`] = `
[
  {
    "additional_info": null,
    "backup_location": null,
    "business_id": "",
    "capacity": 0,
    "care_area_id": "6529f6ce-9777-11eb-ba8a-8f6495ec5104",
    "closing_date": null,
    "club_apply_period": null,
    "cost_center": "99",
    "created": Any<String>,
    "daily_preparatory_time": null,
    "daily_preschool_time": null,
    "daycare_apply_period": "[2021-04-20,)",
    "decision_daycare_name": "Tenhon testiyksikkö",
    "decision_handler": "",
    "decision_handler_address": "",
    "decision_preschool_name": "",
    "dw_cost_center": null,
    "email": null,
    "enabled_pilot_features": "{}",
    "finance_decision_handler": null,
    "ghost_unit": false,
    "iban": "",
    "id": "19fec146-e2f1-11eb-8473-db55258254c5",
    "invoiced_by_municipality": true,
    "language": "fi",
    "language_emphasis_id": null,
    "location": {
      "x": 21.55555,
      "y": 61.55555,
    },
    "mailing_po_box": "Testikuja 123",
    "mailing_post_office": "Tenhola",
    "mailing_postal_code": "12000",
    "mailing_street_address": null,
    "mealtime_breakfast": null,
    "mealtime_evening_snack": null,
    "mealtime_lunch": null,
    "mealtime_snack": null,
    "mealtime_supper": null,
    "name": "Tenhon testiyksikkö",
    "opening_date": "2020-03-01T00:00:00.000Z",
    "operation_days": [],
    "operation_times": "{NULL,NULL,NULL,NULL,NULL,NULL,NULL}",
    "oph_organizer_oid": null,
    "oph_unit_oid": null,
    "phone": null,
    "post_office": "Tenhola",
    "postal_code": "12000",
    "preschool_apply_period": null,
    "provider_id": "",
    "provider_type": "MUNICIPAL",
    "round_the_clock": false,
    "schedule": null,
    "street_address": "Testikuja 123",
    "type": "{CENTRE}",
    "unit_manager_email": "",
    "unit_manager_name": "",
    "unit_manager_phone": "",
    "updated": Any<String>,
    "upload_children_to_varda": false,
    "upload_to_koski": false,
    "upload_to_varda": false,
    "url": null,
  },
  {
    "additional_info": null,
    "backup_location": null,
    "business_id": "",
    "capacity": 0,
    "care_area_id": "6529f5a2-9777-11eb-ba89-cfcda122ed3b",
    "closing_date": null,
    "club_apply_period": null,
    "cost_center": null,
    "created": Any<String>,
    "daily_preparatory_time": null,
    "daily_preschool_time": null,
    "daycare_apply_period": "[2021-04-20,)",
    "decision_daycare_name": "Pujakan testiyksikkö",
    "decision_handler": "",
    "decision_handler_address": "",
    "decision_preschool_name": "",
    "dw_cost_center": null,
    "email": null,
    "enabled_pilot_features": "{}",
    "finance_decision_handler": null,
    "ghost_unit": false,
    "iban": "",
    "id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
    "invoiced_by_municipality": false,
    "language": "fi",
    "language_emphasis_id": null,
    "location": {
      "x": 21.66666,
      "y": 61.66666,
    },
    "mailing_po_box": "Testaajankatu 321",
    "mailing_post_office": "Pajuoja",
    "mailing_postal_code": "13000",
    "mailing_street_address": null,
    "mealtime_breakfast": null,
    "mealtime_evening_snack": null,
    "mealtime_lunch": null,
    "mealtime_snack": null,
    "mealtime_supper": null,
    "name": "Pujakan testiyksikkö",
    "opening_date": "2020-03-01T00:00:00.000Z",
    "operation_days": [],
    "operation_times": "{NULL,NULL,NULL,NULL,NULL,NULL,NULL}",
    "oph_organizer_oid": null,
    "oph_unit_oid": null,
    "phone": null,
    "post_office": "Pajuoja",
    "postal_code": "13000",
    "preschool_apply_period": null,
    "provider_id": "",
    "provider_type": "MUNICIPAL",
    "round_the_clock": false,
    "schedule": null,
    "street_address": "Testaajankatu 321",
    "type": "{CENTRE}",
    "unit_manager_email": "",
    "unit_manager_name": "",
    "unit_manager_phone": "",
    "updated": Any<String>,
    "upload_children_to_varda": false,
    "upload_to_koski": false,
    "upload_to_varda": false,
    "url": null,
  },
  {
    "additional_info": null,
    "backup_location": null,
    "business_id": "",
    "capacity": 0,
    "care_area_id": "6529f5a2-9777-11eb-ba89-cfcda122ed3b",
    "closing_date": null,
    "club_apply_period": null,
    "cost_center": null,
    "created": Any<String>,
    "daily_preparatory_time": null,
    "daily_preschool_time": null,
    "daycare_apply_period": "[2021-04-20,)",
    "decision_daycare_name": "Perhepäivähoidon hakuyksikkö",
    "decision_handler": "",
    "decision_handler_address": "",
    "decision_preschool_name": "",
    "dw_cost_center": null,
    "email": null,
    "enabled_pilot_features": "{}",
    "finance_decision_handler": null,
    "ghost_unit": false,
    "iban": "",
    "id": "cecdf326-0a56-11ec-90a9-e73454a1ee1a",
    "invoiced_by_municipality": false,
    "language": "fi",
    "language_emphasis_id": null,
    "location": {
      "x": 21.66666,
      "y": 61.66666,
    },
    "mailing_po_box": "Testaajankatu 4321",
    "mailing_post_office": "Pajuojala",
    "mailing_postal_code": "13001",
    "mailing_street_address": null,
    "mealtime_breakfast": null,
    "mealtime_evening_snack": null,
    "mealtime_lunch": null,
    "mealtime_snack": null,
    "mealtime_supper": null,
    "name": "Perhepäivähoidon hakuyksikkö",
    "opening_date": "2020-03-01T00:00:00.000Z",
    "operation_days": [],
    "operation_times": "{NULL,NULL,NULL,NULL,NULL,NULL,NULL}",
    "oph_organizer_oid": null,
    "oph_unit_oid": null,
    "phone": null,
    "post_office": "Pajuojala",
    "postal_code": "13001",
    "preschool_apply_period": null,
    "provider_id": "",
    "provider_type": "MUNICIPAL",
    "round_the_clock": false,
    "schedule": null,
    "street_address": "Testaajankatu 4321",
    "type": "{CENTRE}",
    "unit_manager_email": "",
    "unit_manager_name": "",
    "unit_manager_phone": "",
    "updated": Any<String>,
    "upload_children_to_varda": false,
    "upload_to_koski": false,
    "upload_to_varda": false,
    "url": null,
  },
]
`;

exports[`GET /transfer positive should return transferred departments 1`] = `
{
  "caretakers": [
    {
      "amount": "3",
      "created": Any<String>,
      "end_date": null,
      "group_id": Any<String>,
      "id": Any<String>,
      "start_date": "2020-03-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "amount": "3",
      "created": Any<String>,
      "end_date": null,
      "group_id": Any<String>,
      "id": Any<String>,
      "start_date": "2020-03-01T00:00:00.000Z",
      "updated": Any<String>,
    },
  ],
  "groups": [
    {
      "daycare_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "end_date": null,
      "id": Any<String>,
      "jamix_customer_id": null,
      "name": "Tenhon terhot",
      "start_date": "2020-03-01T00:00:00.000Z",
    },
    {
      "daycare_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
      "end_date": null,
      "id": Any<String>,
      "jamix_customer_id": null,
      "name": "Tujun tupajumit",
      "start_date": "2020-03-01T00:00:00.000Z",
    },
  ],
  "messageAccounts": [
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "employee_id": null,
      "id": Any<String>,
      "person_id": null,
      "type": "GROUP",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "employee_id": null,
      "id": Any<String>,
      "person_id": null,
      "type": "GROUP",
      "updated": Any<String>,
    },
  ],
}
`;

exports[`GET /transfer positive should return transferred families 1`] = `
{
  "children": [
    {
      "child_id": Any<String>,
      "conflict": false,
      "created": Any<String>,
      "end_date": "2037-05-31T00:00:00.000Z",
      "head_of_child": Any<String>,
      "id": Any<String>,
      "start_date": "2020-12-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "child_id": Any<String>,
      "conflict": false,
      "created": Any<String>,
      "end_date": "2036-11-24T00:00:00.000Z",
      "head_of_child": Any<String>,
      "id": Any<String>,
      "start_date": "2020-12-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "child_id": Any<String>,
      "conflict": false,
      "created": Any<String>,
      "end_date": "2020-11-30T00:00:00.000Z",
      "head_of_child": Any<String>,
      "id": Any<String>,
      "start_date": "2019-11-25T00:00:00.000Z",
      "updated": Any<String>,
    },
  ],
  "partners": [
    {
      "conflict": false,
      "create_source": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "created_from_application": null,
      "end_date": "2020-11-30T00:00:00.000Z",
      "indx": 1,
      "modified_at": null,
      "modified_by": null,
      "modify_source": null,
      "other_indx": 2,
      "partnership_id": Any<String>,
      "person_id": Any<String>,
      "start_date": "2019-11-25T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "conflict": false,
      "create_source": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "created_from_application": null,
      "end_date": null,
      "indx": 1,
      "modified_at": null,
      "modified_by": null,
      "modify_source": null,
      "other_indx": 2,
      "partnership_id": Any<String>,
      "person_id": Any<String>,
      "start_date": "2020-12-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "conflict": false,
      "create_source": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "created_from_application": null,
      "end_date": "2020-11-30T00:00:00.000Z",
      "indx": 2,
      "modified_at": null,
      "modified_by": null,
      "modify_source": null,
      "other_indx": 1,
      "partnership_id": Any<String>,
      "person_id": Any<String>,
      "start_date": "2019-11-25T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "conflict": false,
      "create_source": null,
      "created_at": Any<String>,
      "created_by": Any<String>,
      "created_from_application": null,
      "end_date": null,
      "indx": 2,
      "modified_at": null,
      "modified_by": null,
      "modify_source": null,
      "other_indx": 1,
      "partnership_id": Any<String>,
      "person_id": Any<String>,
      "start_date": "2020-12-01T00:00:00.000Z",
      "updated": Any<String>,
    },
  ],
}
`;

exports[`GET /transfer positive should return transferred fee alterations 1`] = `
[
  {
    "amount": 10,
    "id": Any<String>,
    "is_absolute": true,
    "notes": "ALENNUS AP/IP",
    "person_id": Any<String>,
    "type": "DISCOUNT",
    "updated_at": Any<String>,
    "updated_by": Any<String>,
    "valid_from": "2020-03-01T00:00:00.000Z",
    "valid_to": null,
  },
]
`;

exports[`GET /transfer positive should return transferred fee decisions 1`] = `
{
  "feeDecisionChildren": [
    {
      "base_fee": 0,
      "child_date_of_birth": "2014-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "child_income": {
        "data": {},
        "effect": "MAX_FEE_ACCEPTED",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "created": Any<String>,
      "fee": 0,
      "fee_alterations": [],
      "fee_decision_id": Any<String>,
      "final_fee": 0,
      "id": Any<String>,
      "placement_type": "PRESCHOOL_DAYCARE",
      "placement_unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "service_need_contract_days_per_month": null,
      "service_need_description_fi": "Esiopetusta täydentävä varhaiskasvatus - max 5 h päivässä",
      "service_need_description_sv": "Esiopetusta täydentävä varhaiskasvatus - max 5 h päivässä",
      "service_need_fee_coefficient": "0.60",
      "service_need_missing": false,
      "service_need_option_id": null,
      "sibling_discount": 0,
      "updated": Any<String>,
    },
    {
      "base_fee": 0,
      "child_date_of_birth": "2015-11-25T00:00:00.000Z",
      "child_id": Any<String>,
      "child_income": {
        "data": {},
        "effect": "MAX_FEE_ACCEPTED",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "created": Any<String>,
      "fee": 0,
      "fee_alterations": [],
      "fee_decision_id": Any<String>,
      "final_fee": 0,
      "id": Any<String>,
      "placement_type": "DAYCARE",
      "placement_unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "service_need_contract_days_per_month": null,
      "service_need_description_fi": "Kokopäiväinen",
      "service_need_description_sv": "Kokopäiväinen",
      "service_need_fee_coefficient": "1.00",
      "service_need_missing": false,
      "service_need_option_id": null,
      "sibling_discount": 0,
      "updated": Any<String>,
    },
    {
      "base_fee": 49200,
      "child_date_of_birth": "2019-06-01T00:00:00.000Z",
      "child_id": Any<String>,
      "child_income": null,
      "created": Any<String>,
      "fee": 49200,
      "fee_alterations": [
        {
          "amount": 100,
          "effect": -10000,
          "isAbsolute": true,
          "type": "DISCOUNT",
        },
        {
          "amount": 288,
          "effect": -28800,
          "isAbsolute": true,
          "type": "DISCOUNT",
        },
      ],
      "fee_decision_id": Any<String>,
      "final_fee": 10400,
      "id": Any<String>,
      "placement_type": "DAYCARE",
      "placement_unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "service_need_contract_days_per_month": null,
      "service_need_description_fi": "Kokopäiväinen",
      "service_need_description_sv": "Kokopäiväinen",
      "service_need_fee_coefficient": "1.00",
      "service_need_missing": false,
      "service_need_option_id": null,
      "sibling_discount": 0,
      "updated": Any<String>,
    },
  ],
  "feeDecisions": [
    {
      "approved_at": null,
      "approved_by_id": null,
      "cancelled_at": null,
      "created": Any<String>,
      "decision_handler_id": null,
      "decision_number": "123456795",
      "decision_type": "NORMAL",
      "difference": "{}",
      "document_key": null,
      "family_size": 2,
      "fee_thresholds": {
        "incomeMultiplier": null,
        "maxFee": null,
        "maxIncomeThreshold": null,
        "minFee": null,
        "minIncomeThreshold": null,
      },
      "head_of_family_id": Any<String>,
      "head_of_family_income": {
        "data": {
          "MAIN_INCOME": 0,
        },
        "effect": "INCOME",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "id": Any<String>,
      "partner_id": null,
      "partner_income": null,
      "sent_at": null,
      "status": "SENT",
      "total_fee": 0,
      "updated": Any<String>,
      "valid_during": "[2019-08-01,2100-01-01)",
    },
    {
      "approved_at": null,
      "approved_by_id": null,
      "cancelled_at": null,
      "created": Any<String>,
      "decision_handler_id": null,
      "decision_number": "123456790",
      "decision_type": "NORMAL",
      "difference": "{}",
      "document_key": null,
      "family_size": 2,
      "fee_thresholds": {
        "incomeMultiplier": null,
        "maxFee": null,
        "maxIncomeThreshold": null,
        "minFee": null,
        "minIncomeThreshold": null,
      },
      "head_of_family_id": Any<String>,
      "head_of_family_income": {
        "data": {
          "MAIN_INCOME": 10020,
        },
        "effect": "INCOME",
        "total": 10020,
        "totalExpenses": 0,
        "totalIncome": 10020,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "id": Any<String>,
      "partner_id": Any<String>,
      "partner_income": {
        "data": {},
        "effect": "MAX_FEE_ACCEPTED",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "sent_at": null,
      "status": "SENT",
      "total_fee": 10400,
      "updated": Any<String>,
      "valid_during": "[2020-03-01,2100-01-01)",
    },
    {
      "approved_at": null,
      "approved_by_id": null,
      "cancelled_at": null,
      "created": Any<String>,
      "decision_handler_id": null,
      "decision_number": "123456794",
      "decision_type": "NORMAL",
      "difference": "{}",
      "document_key": null,
      "family_size": 2,
      "fee_thresholds": {
        "incomeMultiplier": null,
        "maxFee": null,
        "maxIncomeThreshold": null,
        "minFee": null,
        "minIncomeThreshold": null,
      },
      "head_of_family_id": Any<String>,
      "head_of_family_income": {
        "data": {
          "MAIN_INCOME": 0,
        },
        "effect": "INCOME",
        "total": 0,
        "totalExpenses": 0,
        "totalIncome": 0,
        "validFrom": null,
        "validTo": null,
        "worksAtECHA": false,
      },
      "id": Any<String>,
      "partner_id": null,
      "partner_income": null,
      "sent_at": null,
      "status": "SENT",
      "total_fee": 0,
      "updated": Any<String>,
      "valid_during": "[2020-08-03,2100-01-01)",
    },
  ],
}
`;

exports[`GET /transfer positive should return transferred income 1`] = `
[
  {
    "application_id": null,
    "data": {
      "DAILY_ALLOWANCE": {
        "amount": 1000,
        "coefficient": "DAILY_ALLOWANCE_21_5",
      },
      "MAIN_INCOME": {
        "amount": 450060,
        "coefficient": "MONTHLY_NO_HOLIDAY_BONUS",
      },
      "OTHER_INCOME": {
        "amount": 56000,
        "coefficient": "MONTHLY_NO_HOLIDAY_BONUS",
      },
      "PAID_ALIMONY": {
        "amount": 21500,
        "coefficient": "MONTHLY_NO_HOLIDAY_BONUS",
      },
    },
    "effect": "INCOME",
    "id": Any<String>,
    "is_entrepreneur": false,
    "notes": "",
    "person_id": Any<String>,
    "updated_at": Any<String>,
    "updated_by": Any<String>,
    "valid_from": "2020-03-01T00:00:00.000Z",
    "valid_to": null,
    "works_at_echa": false,
  },
  {
    "application_id": null,
    "data": {
      "MAIN_INCOME": {
        "amount": 5000000,
        "coefficient": "MONTHLY_NO_HOLIDAY_BONUS",
      },
    },
    "effect": "INCOME",
    "id": Any<String>,
    "is_entrepreneur": false,
    "notes": "",
    "person_id": Any<String>,
    "updated_at": Any<String>,
    "updated_by": Any<String>,
    "valid_from": "2020-03-01T00:00:00.000Z",
    "valid_to": "2021-03-01T00:00:00.000Z",
    "works_at_echa": false,
  },
]
`;

exports[`GET /transfer positive should return transferred pedagogical document data 1`] = `
[
  {
    "child_id": Any<String>,
    "created": "2022-02-14T00:00:00.000Z",
    "created_by": Any<String>,
    "description": "Varhaiskasvatussuunnitelma Testi 2021-2022",
    "email_job_created_at": null,
    "email_sent": false,
    "id": Any<String>,
    "updated": "2022-02-14T00:00:00.000Z",
    "updated_by": Any<String>,
  },
  {
    "child_id": Any<String>,
    "created": "2022-02-14T00:00:00.000Z",
    "created_by": Any<String>,
    "description": "Varhaiskasvatussuunnitelma Testi 2021-2022",
    "email_job_created_at": null,
    "email_sent": false,
    "id": Any<String>,
    "updated": "2022-02-14T00:00:00.000Z",
    "updated_by": Any<String>,
  },
]
`;

exports[`GET /transfer positive should return transferred pedagogical document pdf 1`] = `
[
  {
    "$metadata": {
      "attempts": 1,
      "httpStatusCode": 200,
      "totalRetryDelay": 0,
    },
  },
  {
    "$metadata": {
      "attempts": 1,
      "httpStatusCode": 200,
      "totalRetryDelay": 0,
    },
  },
]
`;

exports[`GET /transfer positive should return transferred persons 1`] = `
{
  "messageAccounts": [
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
    {
      "active": true,
      "created": Any<String>,
      "daycare_group_id": null,
      "employee_id": null,
      "id": Any<String>,
      "person_id": Any<String>,
      "type": "CITIZEN",
      "updated": Any<String>,
    },
  ],
  "persons": [
    {
      "aad_object_id": null,
      "backup_phone": "",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": "fake@notmaildomain.notext",
      "enabled_email_types": null,
      "first_name": "Aimo",
      "force_manual_fee_decisions": false,
      "freetext_vec": "'00001':5 '123':4 'aimo':1 'authentic':2 'fakestreet':3",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "Authentic",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "000-0000000",
      "post_office": "Ypäjä",
      "postal_code": "00001",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": false,
      "restricted_details_end_date": null,
      "social_security_number": "020967-9992",
      "ssn_adding_disabled": false,
      "street_address": "Fakestreet 123",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
    {
      "aad_object_id": null,
      "backup_phone": "",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": "fake2@notmaildomain.notext",
      "enabled_email_types": null,
      "first_name": "Teppo",
      "force_manual_fee_decisions": false,
      "freetext_vec": "'00002':5 '321':4 'streetstreet':3 'temporary':2 'teppo':1",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "Temporary",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "111-1111111",
      "post_office": "Ypäjä",
      "postal_code": "00002",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": false,
      "restricted_details_end_date": null,
      "social_security_number": null,
      "ssn_adding_disabled": false,
      "street_address": "StreetStreet 321",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
    {
      "aad_object_id": null,
      "backup_phone": "",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": "fake3@notmaildomain.notext",
      "enabled_email_types": null,
      "first_name": "Hilda",
      "force_manual_fee_decisions": false,
      "freetext_vec": "'hidden':2 'hilda':1",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "Hidden",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "0222222222",
      "post_office": "",
      "postal_code": "",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": true,
      "restricted_details_end_date": null,
      "social_security_number": "180476-998M",
      "ssn_adding_disabled": false,
      "street_address": "",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
    {
      "aad_object_id": null,
      "backup_phone": "222-2222223",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": "fake3@notmaildomain.notext",
      "enabled_email_types": null,
      "first_name": "Christian",
      "force_manual_fee_decisions": false,
      "freetext_vec": "'00001':5 '2':4 'child':2 'christian':1 'hidestreet':3",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "Child",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "222-2222222",
      "post_office": "Ypäjä",
      "postal_code": "00001",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": false,
      "restricted_details_end_date": null,
      "social_security_number": "010619A9501",
      "ssn_adding_disabled": false,
      "street_address": "HideStreet 2",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
    {
      "aad_object_id": null,
      "backup_phone": "222-2222223",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": "fake3@notmaildomain.notext",
      "enabled_email_types": null,
      "first_name": "Camilla",
      "force_manual_fee_decisions": false,
      "freetext_vec": "'12000':5 '2':4 'camilla':1 'child':2 'hidestreet':3",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "Child",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "222-2222222",
      "post_office": "Tenhola",
      "postal_code": "12000",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": false,
      "restricted_details_end_date": null,
      "social_security_number": "251118A9509",
      "ssn_adding_disabled": false,
      "street_address": "HideStreet 2",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
    {
      "aad_object_id": null,
      "backup_phone": "",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": null,
      "enabled_email_types": null,
      "first_name": "",
      "force_manual_fee_decisions": false,
      "freetext_vec": "",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "",
      "post_office": "",
      "postal_code": "",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": false,
      "restricted_details_end_date": null,
      "social_security_number": "181101A9092",
      "ssn_adding_disabled": false,
      "street_address": "",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
    {
      "aad_object_id": null,
      "backup_phone": "",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": null,
      "enabled_email_types": null,
      "first_name": "",
      "force_manual_fee_decisions": false,
      "freetext_vec": "",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "",
      "post_office": "",
      "postal_code": "",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": false,
      "restricted_details_end_date": null,
      "social_security_number": "251115A9509",
      "ssn_adding_disabled": false,
      "street_address": "",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
    {
      "aad_object_id": null,
      "backup_phone": "",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": null,
      "enabled_email_types": null,
      "first_name": "",
      "force_manual_fee_decisions": false,
      "freetext_vec": "",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "",
      "post_office": "",
      "postal_code": "",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": false,
      "restricted_details_end_date": null,
      "social_security_number": "180476-999M",
      "ssn_adding_disabled": false,
      "street_address": "",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
    {
      "aad_object_id": null,
      "backup_phone": "",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": null,
      "enabled_email_types": null,
      "first_name": "",
      "force_manual_fee_decisions": false,
      "freetext_vec": "",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "",
      "post_office": "",
      "postal_code": "",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": false,
      "restricted_details_end_date": null,
      "social_security_number": "180475-999M",
      "ssn_adding_disabled": false,
      "street_address": "",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
    {
      "aad_object_id": null,
      "backup_phone": "",
      "created": Any<String>,
      "date_of_birth": Any<String>,
      "date_of_death": null,
      "duplicate_of": null,
      "email": null,
      "enabled_email_types": null,
      "first_name": "",
      "force_manual_fee_decisions": false,
      "freetext_vec": "",
      "id": Any<String>,
      "invoice_recipient_name": "",
      "invoicing_post_office": "",
      "invoicing_postal_code": "",
      "invoicing_street_address": "",
      "keycloak_email": null,
      "language": "fi",
      "last_login": null,
      "last_name": "",
      "nationalities": [],
      "oph_person_oid": null,
      "phone": "",
      "post_office": "",
      "postal_code": "",
      "preferred_name": "",
      "residence_code": "",
      "restricted_details_enabled": false,
      "restricted_details_end_date": null,
      "social_security_number": "251114A9509",
      "ssn_adding_disabled": false,
      "street_address": "",
      "updated": Any<String>,
      "updated_from_vtj": Any<String>,
      "vtj_dependants_queried": null,
      "vtj_guardians_queried": null,
    },
  ],
}
`;

exports[`GET /transfer positive should return transferred placements 1`] = `
{
  "children": [
    {
      "additionalinfo": "",
      "allergies": "",
      "diet": "",
      "id": Any<String>,
      "language_at_home": "",
      "language_at_home_details": "",
      "medication": "",
    },
    {
      "additionalinfo": "",
      "allergies": "",
      "diet": "",
      "id": Any<String>,
      "language_at_home": "",
      "language_at_home_details": "",
      "medication": "",
    },
    {
      "additionalinfo": "",
      "allergies": "",
      "diet": "",
      "id": Any<String>,
      "language_at_home": "",
      "language_at_home_details": "",
      "medication": "",
    },
    {
      "additionalinfo": "",
      "allergies": "",
      "diet": "",
      "id": Any<String>,
      "language_at_home": "",
      "language_at_home_details": "",
      "medication": "",
    },
  ],
  "daycareGroups": [
    {
      "daycare_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
      "end_date": "2020-12-31T00:00:00.000Z",
      "id": Any<String>,
      "jamix_customer_id": null,
      "name": "Ryhmä",
      "start_date": "2020-03-01T00:00:00.000Z",
    },
  ],
  "groupPlacements": [
    {
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "daycare_placement_id": Any<String>,
      "end_date": "2020-07-31T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2019-08-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "daycare_placement_id": Any<String>,
      "end_date": "2019-12-31T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2019-08-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "daycare_placement_id": Any<String>,
      "end_date": "2020-07-31T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2019-08-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "daycare_placement_id": Any<String>,
      "end_date": "2020-08-02T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2020-08-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "daycare_placement_id": Any<String>,
      "end_date": "2021-07-31T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2020-08-03T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "daycare_placement_id": Any<String>,
      "end_date": "2020-08-01T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2020-03-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "daycare_placement_id": Any<String>,
      "end_date": "2020-12-31T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2020-03-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "created": Any<String>,
      "daycare_group_id": Any<String>,
      "daycare_placement_id": Any<String>,
      "end_date": "2025-07-31T00:00:00.000Z",
      "id": Any<String>,
      "start_date": "2021-03-01T00:00:00.000Z",
      "updated": Any<String>,
    },
  ],
  "placements": [
    {
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2020-07-31T00:00:00.000Z",
      "id": Any<String>,
      "place_guarantee": false,
      "start_date": "2019-08-01T00:00:00.000Z",
      "terminated_by": null,
      "termination_requested_date": null,
      "type": "PRESCHOOL_DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "updated": Any<String>,
    },
    {
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2019-12-31T00:00:00.000Z",
      "id": Any<String>,
      "place_guarantee": false,
      "start_date": "2019-08-01T00:00:00.000Z",
      "terminated_by": null,
      "termination_requested_date": null,
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "updated": Any<String>,
    },
    {
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2020-07-31T00:00:00.000Z",
      "id": Any<String>,
      "place_guarantee": false,
      "start_date": "2019-08-01T00:00:00.000Z",
      "terminated_by": null,
      "termination_requested_date": null,
      "type": "PRESCHOOL_DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "updated": Any<String>,
    },
    {
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2020-08-02T00:00:00.000Z",
      "id": Any<String>,
      "place_guarantee": false,
      "start_date": "2020-08-01T00:00:00.000Z",
      "terminated_by": null,
      "termination_requested_date": null,
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "updated": Any<String>,
    },
    {
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2021-07-31T00:00:00.000Z",
      "id": Any<String>,
      "place_guarantee": false,
      "start_date": "2020-08-03T00:00:00.000Z",
      "terminated_by": null,
      "termination_requested_date": null,
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "updated": Any<String>,
    },
    {
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2020-08-01T00:00:00.000Z",
      "id": Any<String>,
      "place_guarantee": false,
      "start_date": "2020-03-01T00:00:00.000Z",
      "terminated_by": null,
      "termination_requested_date": null,
      "type": "DAYCARE",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "updated": Any<String>,
    },
    {
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2020-12-31T00:00:00.000Z",
      "id": Any<String>,
      "place_guarantee": false,
      "start_date": "2020-03-01T00:00:00.000Z",
      "terminated_by": null,
      "termination_requested_date": null,
      "type": "DAYCARE_PART_TIME",
      "unit_id": "19fec1fa-e2f1-11eb-8473-eb1f7ce94b07",
      "updated": Any<String>,
    },
    {
      "child_id": Any<String>,
      "created": Any<String>,
      "end_date": "2025-07-31T00:00:00.000Z",
      "id": Any<String>,
      "place_guarantee": false,
      "start_date": "2021-03-01T00:00:00.000Z",
      "terminated_by": null,
      "termination_requested_date": null,
      "type": "DAYCARE_PART_TIME",
      "unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
      "updated": Any<String>,
    },
  ],
  "serviceNeeds": [
    {
      "confirmed_at": null,
      "confirmed_by": null,
      "created": Any<String>,
      "end_date": "2020-07-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "503593e8-b961-11eb-b527-a3dcdfb628ec",
      "placement_id": Any<String>,
      "shift_care": "NONE",
      "start_date": "2019-08-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "confirmed_at": null,
      "confirmed_by": null,
      "created": Any<String>,
      "end_date": "2019-12-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "placement_id": Any<String>,
      "shift_care": "NONE",
      "start_date": "2019-08-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "confirmed_at": null,
      "confirmed_by": null,
      "created": Any<String>,
      "end_date": "2020-07-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "503593e8-b961-11eb-b527-a3dcdfb628ec",
      "placement_id": Any<String>,
      "shift_care": "NONE",
      "start_date": "2019-08-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "confirmed_at": null,
      "confirmed_by": null,
      "created": Any<String>,
      "end_date": "2020-08-02T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "placement_id": Any<String>,
      "shift_care": "NONE",
      "start_date": "2020-08-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "confirmed_at": null,
      "confirmed_by": null,
      "created": Any<String>,
      "end_date": "2021-07-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "placement_id": Any<String>,
      "shift_care": "NONE",
      "start_date": "2020-08-03T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "confirmed_at": null,
      "confirmed_by": null,
      "created": Any<String>,
      "end_date": "2020-08-01T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef70a0-bf85-11eb-91e6-1fb57a101161",
      "placement_id": Any<String>,
      "shift_care": "NONE",
      "start_date": "2020-03-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "confirmed_at": null,
      "confirmed_by": null,
      "created": Any<String>,
      "end_date": "2020-12-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef7370-bf85-11eb-91e7-6fcd728c518d",
      "placement_id": Any<String>,
      "shift_care": "NONE",
      "start_date": "2020-03-01T00:00:00.000Z",
      "updated": Any<String>,
    },
    {
      "confirmed_at": null,
      "confirmed_by": null,
      "created": Any<String>,
      "end_date": "2025-07-31T00:00:00.000Z",
      "id": Any<String>,
      "option_id": "86ef7370-bf85-11eb-91e7-6fcd728c518d",
      "placement_id": Any<String>,
      "shift_care": "NONE",
      "start_date": "2021-03-01T00:00:00.000Z",
      "updated": Any<String>,
    },
  ],
}
`;

exports[`GET /transfer positive should return transferred voucher value decisions 1`] = `
[
  {
    "annulled_at": null,
    "approved_at": "2020-12-01T00:00:00.000Z",
    "approved_by": null,
    "assistance_need_coefficient": "0.00",
    "base_co_payment": 100,
    "base_value": 124700,
    "cancelled_at": null,
    "child_date_of_birth": "2019-06-01T00:00:00.000Z",
    "child_id": Any<String>,
    "child_income": null,
    "co_payment": 100,
    "created": Any<String>,
    "decision_handler": null,
    "decision_number": "1",
    "decision_type": "NORMAL",
    "difference": "{}",
    "document_key": null,
    "family_size": 5,
    "fee_alterations": [],
    "fee_thresholds": {
      "incomeMultiplier": null,
      "maxFee": null,
      "maxIncomeThreshold": null,
      "minFee": null,
      "minIncomeThreshold": null,
    },
    "final_co_payment": 100,
    "head_of_family_id": Any<String>,
    "head_of_family_income": null,
    "id": Any<String>,
    "partner_id": Any<String>,
    "partner_income": null,
    "placement_type": "DAYCARE",
    "placement_unit_id": "19fec146-e2f1-11eb-8473-db55258254c5",
    "sent_at": null,
    "service_need_fee_coefficient": "1.00",
    "service_need_fee_description_fi": "Kokopäiväinen",
    "service_need_fee_description_sv": "Kokopäiväinen",
    "service_need_missing": false,
    "service_need_voucher_value_coefficient": "1.00",
    "service_need_voucher_value_description_fi": "Kokopäiväinen",
    "service_need_voucher_value_description_sv": "Kokopäiväinen",
    "sibling_discount": 0,
    "status": "SENT",
    "updated": Any<String>,
    "valid_from": "2020-04-01T00:00:00.000Z",
    "valid_to": "2099-12-31T00:00:00.000Z",
    "validity_updated_at": null,
    "voucher_value": 1000,
  },
]
`;
